# dahShop

./: .gitignore  README.md  package.json  pnpm-lock.yaml
backend/: Cargo.toml  database.db  railway.toml
backend/db/: Cargo.toml  database.db
backend/db/src/: lib.rs  schema.rs
backend/migrations/2025-11-26-184400-0000_products/: up.sql
backend/migrations/2025-11-26-184406-0000_orders/: up.sql
backend/src/: main.rs  models.rs
frontend/: package-lock.json  package.json  pnpm-lock.yaml  vercel.json
frontend/src/: app.html
frontend/src/lib/api/: api.js
frontend/src/lib/components/: Card.svelte  Footer.svelte
frontend/src/lib/components/ui/: CartSidebar.svelte  ProductGrid.svelte
frontend/src/lib/stores/: cart.js
frontend/src/routes/: +layout.svelte
frontend/src/routes/debug_tailwind/: +page.svelte
src/: app.css
src/lib/components/: Card.svelte
src/lib/components/ui/: ProductGrid.svelte
src/routes/: +page.svelte
