[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
db = { path = "./db"}
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
